<?xml version="1.0" encoding="utf-8"?>
<!-- 
/* 
 * AndroBOINC - BOINC Manager for Android
 * Copyright (C) 2010, Pavol Michalec
 * 
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 * 
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/menuAbout"
		android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/menuAbout"/>
	<item
		android:id="@+id/menuManage"
		android:icon="@android:drawable/ic_menu_manage"
		android:title="@string/menuManage"/>
	<item
		android:id="@+id/menuPreferences"
		android:icon="@android:drawable/ic_menu_preferences"
		android:title="@string/menuPreferences"/>
	<item
		android:id="@+id/menuConnect"
		android:icon="@drawable/ic_menu_goto"
		android:title="@string/menuConnect"/>
	<item
		android:id="@+id/menuDisconnect"
		android:icon="@android:drawable/ic_menu_close_clear_cancel"
		android:title="@string/menuDisconnect"/>
</menu>
