<?xml version="1.0" encoding="utf-8"?>
<!-- 
/* 
 * AndroBOINC - BOINC Manager for Android
 * Copyright (C) 2010, Pavol Michalec
 * 
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 * 
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="10dip">
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/editHostNickname"
			android:paddingRight="5dip" />
		<EditText
			android:id="@+id/editHostNickname" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@android:drawable/editbox_background"
			android:inputType="textNoSuggestions|textUri" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/editHostAddress"
			android:paddingRight="5dip" />
		<EditText
			android:id="@+id/editHostAddress" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@android:drawable/editbox_background"
			android:inputType="textNoSuggestions|textUri" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="right">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/editHostPort"
			android:paddingRight="5dip" />
		<EditText
			android:id="@+id/editHostPort" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@android:drawable/editbox_background"
			android:inputType="number"
			android:digits="0123456789"
			android:maxLength="5"
			android:lines="1"
			android:width="70sp" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/editHostPassword"
			android:paddingRight="5dip" />
		<EditText
			android:id="@+id/editHostPassword"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@android:drawable/editbox_background"
			android:inputType="textPassword" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="right">
		<Button
			android:id="@+id/editHostCancel" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cancel" />
		<Button
			android:id="@+id/editHostOk" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip"
			android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>
